# linkedin-job-scraper-ai-agent

./: .gitignore  README.md  hello.py  pyproject.toml  start.py
src/agent/: intelligence.py  llm.py  prompts.py
src/automation/: browser.py  linkedin.py  resume_parser.py
src/recording/: recorder.py
src/ui/: app.py
src/utils/: helpers.py
tests/: browser.py  linkedin.py
