[project]
name = "personal-assistant-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.12.0",
    "nltk>=3.9.1",
    "ollama>=0.4.6",
    "openai>=1.59.8",
    "playwright>=1.49.1",
    "pymupdf>=1.25.2",
    "pytest>=8.3.4",
]
